--- a/stylish.css
+++ b/stylish.css
@@ -7,8 +7,8 @@ body {
 a {color: white;text-align: center;}
 h1 {font-family: 'Calistoga', cursive;color: white;margin: 0 auto;
 padding-bottom: 10%;padding-top: 20%;text-align: center;}
-h2 {font-size: 100%;text-align: center;}
-p {font-size: 80%;font-weight: bold;}
+h2 {font-size: 5vw;text-align: center;}
+p {font-size: 3.5vw;font-weight: bold;}
 .accentColor { color: #0062ff; text-align: center;}
 
 header h2 {
@@ -22,19 +22,25 @@ header h2 {
 .wrap {
   width: 100%;
   padding: 10px;
-  max-width: 500px;
+  max-width: 600px;
   box-sizing: border-box;
   margin: 0 auto;
 }
+
+/* Dashboard */
+
 .wrapScroll {
   width: 100%;
-  max-width: 300px;
+  max-width: 600px;
   box-sizing: border-box;
   margin: 0 auto;
 }
 
 header {
   text-align: left;
+}
+header img {
+  width: 15vw;
 }
 
 .slides {
@@ -55,13 +61,13 @@ header {
   box-sizing: border-box;
   padding: 5px 15px;;
   border-radius: 12px;
-  height: 130px
+  height: 25vh;
 }
 .slides > div {
   scroll-snap-align: start;
   flex-shrink: 0;
   width: 70%;
-  height: 130px ;
+  height: 25vh ;
   margin-right: 10px;
   position: relative;
 }
@@ -75,12 +81,13 @@ header {
 }
 
 .request img {
+  margin-top: 2.5vh;
   height: 42px;
   width: 100%;
   object-fit: contain;
 }
 .request h2 {
-  margin-top: -5px
+  margin-top: 1vh;
 }
 
 .emergency {
