--- a/Front End/stylish.css
+++ b/Front End/stylish.css
@@ -440,3 +440,12 @@ nav a {
   font-size: 3.5vw;
   margin-top: 2.5vh;
   flex-grow: 1;
+
+
+@media only screen and (min-width: 600px) {
+  
+  p {
+    color: red;
+  }
+  
+}
